Empty Commands added

--- a/src/PhlegmaticOne.WPF.Core/PhlegmaticOne.WPF.Core.csproj
+++ b/src/PhlegmaticOne.WPF.Core/PhlegmaticOne.WPF.Core.csproj
@@ -8,14 +8,21 @@
     <Title>PhlegmaticOne.WPF.Core</Title>
     <Company>Phlegmatic</Company>
     <Description>Contains types for creating ViewModels and Commands in WPF application</Description>
-    <Version>1.1.1</Version>
+    <Version>1.1.2</Version>
     <PackageProjectUrl>https://github.com/PhlegmaticOne/PhlegmaticOne.WPF.Core</PackageProjectUrl>
-    <PackageIcon>Logo - Copy.png</PackageIcon>
+    <PackageIcon>Logo.png</PackageIcon>
     <RepositoryUrl>https://github.com/PhlegmaticOne/PhlegmaticOne.WPF.Core.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes>Added implementation of Commands and base ViewModels</PackageReleaseNotes>
     <PackageTags>WPF;Core;Command;Commands;ViewModel;ViewModels;MVVM</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\..\Downloads\Logo.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
