--- a/src/PhlegmaticOne.WPF.Core/PhlegmaticOne.WPF.Core.csproj
+++ b/src/PhlegmaticOne.WPF.Core/PhlegmaticOne.WPF.Core.csproj
@@ -8,12 +8,12 @@
     <Title>PhlegmaticOne.WPF.Core</Title>
     <Company>Phlegmatic</Company>
     <Description>Contains types for creating ViewModels and Commands in WPF application</Description>
-    <Version>1.1.3</Version>
+    <Version>1.1.4</Version>
     <PackageProjectUrl>https://github.com/PhlegmaticOne/PhlegmaticOne.WPF.Core</PackageProjectUrl>
     <PackageIcon>Logo.png</PackageIcon>
     <RepositoryUrl>https://github.com/PhlegmaticOne/PhlegmaticOne.WPF.Core.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageReleaseNotes>Default predicate for CanExecute is always true predicate</PackageReleaseNotes>
+    <PackageReleaseNotes>Bug fixes</PackageReleaseNotes>
     <PackageTags>WPF;Core;Command;Commands;ViewModel;ViewModels;MVVM</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
